# SDL3_IMGUI_STARTER_PACK

./: CMakeLists.txt  README.md  make.sh  readme.md  setup.sh
src/: color.hpp  main.cpp
